# liturgical-colour-app

./: Dockerfile  README.md  app.py  manifest.json  pyproject.toml  requirements.txt  sw.js
.github/workflows/: publish.yml  test.yml
templates/: template.html
