[tool.poetry]
name = "liturgical-colour-app"
version = "0.1.0"
description = "Simple app to display the current liturgical colour"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]
readme = "README.md"
packages = [{include = "liturgical_colour_app"}]

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
liturgical-colour = "^0.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
